2002-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* contrib/hashcash.el: Require `cl' when compiling.
	(hashcash-strip-quoted-names): Replace `subseq' with `substring'.

2002-06-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu/truncate-article-list): When
	`gnus-large-newsgroup' is equal to nil, no confirmation is
	required.

2002-06-23  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* lisp/pop3.el (pop3-open-ssl-stream): Do away with w32-related
	workaround I installed on 1999-12-27, i.e. also call
	`as-binary-process' in windows-nt.

2002-06-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-send): Kill `message-encoding-buffer'
	even if sending failed.

2002-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* lisp/gnus-msg.el (gnus-message-setup-hook): Default to nil.
	(gnus-setup-message): Run `gnus-maybe-setup-default-charset'.
	(gnus-summary-supersede-article): Don't bind the value for
	`gnus-message-setup-hook'.
	(gnus-summary-resend-bounced-mail): Ditto.

	* lisp/dns.el (dns-make-network-process): Bind
	`default-process-coding-system' to `(binary . binary)'; bind
	`program-coding-system-alist' to nil.

	* lisp/gnus-fun.el (gnus-convert-gray-x-face-to-xpm): Bind
	`input-coding-system' and `output-coding-system' to `binary'.

	* lisp/gnus-namazu.el (gnus-namazu/call-namazu): Bind
	`input-coding-system' and `output-coding-system' to the velue of
	`gnus-namazu-coding-system'.

	* lisp/imap.el (imap-ssl-open): Don't bind the values for
	`input-coding-system' and `output-coding-system'.

	* lisp/nnmaildir.el (nnmaildir-request-scan): Bind
	`output-coding-system' to the value of
	`nnheader-file-coding-system'; bind `file-coding-system' to nil.
	(nnmaildir-request-rename-group): Ditto.
	(nnmaildir-request-replace-article): Ditto.
	(nnmaildir-request-accept-article): Ditto.
	(nnmaildir-request-set-mark): Ditto.
